# prahari

./: .env.example  .gitignore  EXECUTIVE_SUMMARY.md  LICENSE  Makefile  README.md  SUBMISSION.md  SUBMISSION_BRIEF.md  VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
console/: package-lock.json  package.json
console/app/: globals.css  layout.tsx  page.tsx
console/lib/: api.ts  replay.ts
console/scripts/: console_replay_shoot.mjs  console_shoot.mjs
data/: README.md
data/threat_intel/: advisory_account_discovery.md  advisory_c2_beaconing.md  advisory_credential_dumping.md  advisory_data_local_system.md  advisory_data_staging.md  advisory_exfil_usb.md  advisory_exfiltration.md  advisory_insider_lowandslow.md  advisory_insider_valid_accounts.md  advisory_lateral_movement.md  advisory_phishing_macro.md
docs/: AIR_GAPPED.md  API.md  ARCHITECTURE.md  CONSOLE_REDESIGN_PROMPT.md  DECK_STYLE_GUIDE.html  DECK_STYLE_GUIDE.md  DEMO_SCRIPT.md  GO_PUBLIC.md  LIVE_AGENT_RUN.md  PRAHARI_Pitch_Deck.pptx  RESULTS.md  ROADMAP.md  SETUP.md  TECHNICAL_DESIGN.md  VIDEO_PROMPT.md  architecture.md  graph_model.md  sample_incident_brief.md
scripts/: api_smoke.py  attack_demo.py  audit_tamper_demo.py  health_check.py  scale_bench.py  score_agent_attribution.py
services/api/: main.py
services/attribution/: agent.py  attack_kb.py  corpus_report.py  evaluate.py  mapper.py  rag.py
services/graph/: evaluate_incidents.py  fuse.py  incidents.py  ingest.py  ot_eval.py  queries.py  scenario2_eval.py  schema.py
services/ingest/: consumer.py  (+2 more)
(+48 files in other folders)
