[project]
name = "prahari"
version = "0.1.0"
description = "AI cyber-resilience platform"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
    "neo4j>=5.19.0",
    "psycopg[binary]>=3.1.0",
    "scikit-learn>=1.5.0",
    "pyod>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "anthropic>=0.28.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
